<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/foodpic"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="cursive"
        android:text="@string/restaurant"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/staff_button"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="150dp"
        android:background="#80000000"
        android:fontFamily="cursive"
        android:onClick="openStaffPopup"
        android:text="@string/staff"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/guest_button"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:background="#80000000"
        android:fontFamily="cursive"
        android:onClick="openGuestPopup"
        android:text="@string/guest"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/staff_button"
        app:layout_constraintEnd_toStartOf="@id/staff_button"
        app:layout_constraintTop_toTopOf="@id/staff_button" />

</androidx.constraintlayout.widget.ConstraintLayout>